sdk/batch/arm-batch/samples/v7/typescript/README.md
# client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for in some common scenarios.

| **File Name**                                                                                                               | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| --------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [applicationCreateSample.ts][applicationcreatesample]                                                                       | Adds an application to the specified Batch account. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/ApplicationCreate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [applicationDeleteSample.ts][applicationdeletesample]                                                                       | Deletes an application. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/ApplicationDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [applicationGetSample.ts][applicationgetsample]                                                                             | Gets information about the specified application. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/ApplicationGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [applicationListSample.ts][applicationlistsample]                                                                           | Lists all of the applications in the specified account. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/ApplicationList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [applicationPackageActivateSample.ts][applicationpackageactivatesample]                                                     | Activates the specified application package. This should be done after the `ApplicationPackage` was created and uploaded. This needs to be done before an `ApplicationPackage` can be used on Pools or Tasks. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/ApplicationPackageActivate.json                                                                                                                                                                                                                                                                                                                                              |
| [applicationPackageCreateSample.ts][applicationpackagecreatesample]                                                         | Creates an application package record. The record contains a storageUrl where the package should be uploaded to. Once it is uploaded the `ApplicationPackage` needs to be activated using `ApplicationPackageActive` before it can be used. If the auto storage account was configured to use storage keys, the URL returned will contain a SAS. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/ApplicationPackageCreate.json                                                                                                                                                                                                             |
| [applicationPackageDeleteSample.ts][applicationpackagedeletesample]                                                         | Deletes an application package record and its associated binary file. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/ApplicationPackageDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [applicationPackageGetSample.ts][applicationpackagegetsample]                                                               | Gets information about the specified application package. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/ApplicationPackageGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [applicationPackageListSample.ts][applicationpackagelistsample]                                                             | Lists all of the application packages in the specified application. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/ApplicationPackageList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [applicationUpdateSample.ts][applicationupdatesample]                                                                       | Updates settings for the specified application. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/ApplicationUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [batchAccountCreateSample.ts][batchaccountcreatesample]                                                                     | Creates a new Batch account with the specified parameters. Existing accounts cannot be updated with this API and should instead be updated with the Update Batch Account API. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/BatchAccountCreate_BYOS.json                                                                                                                                                                                                                                                                                                                                                                                 |
| [batchAccountDeleteSample.ts][batchaccountdeletesample]                                                                     | Deletes the specified Batch account. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/BatchAccountDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [batchAccountGetDetectorSample.ts][batchaccountgetdetectorsample]                                                           | Gets information about the given detector for a given Batch account. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/DetectorGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [batchAccountGetKeysSample.ts][batchaccountgetkeyssample]                                                                   | This operation applies only to Batch accounts with allowedAuthenticationModes containing 'SharedKey'. If the Batch account doesn't contain 'SharedKey' in its allowedAuthenticationMode, clients cannot use shared keys to authenticate, and must use another allowedAuthenticationModes instead. In this case, getting the keys will fail. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/BatchAccountGetKeys.json                                                                                                                                                                                                                       |
| [batchAccountGetSample.ts][batchaccountgetsample]                                                                           | Gets information about the specified Batch account. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/BatchAccountGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [batchAccountListByResourceGroupSample.ts][batchaccountlistbyresourcegroupsample]                                           | Gets information about the Batch accounts associated with the specified resource group. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/BatchAccountListByResourceGroup.json                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [batchAccountListDetectorsSample.ts][batchaccountlistdetectorssample]                                                       | Gets information about the detectors available for a given Batch account. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/DetectorList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [batchAccountListOutboundNetworkDependenciesEndpointsSample.ts][batchaccountlistoutboundnetworkdependenciesendpointssample] | Lists the endpoints that a Batch Compute Node under this Batch Account may call as part of Batch service administration. If you are deploying a Pool inside of a virtual network that you specify, you must make sure your network allows outbound access to these endpoints. Failure to allow access to these endpoints may cause Batch to mark the affected nodes as unusable. For more information about creating a pool inside of a virtual network, see https://docs.microsoft.com/azure/batch/batch-virtual-network x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/BatchAccountListOutboundNetworkDependenciesEndpoints.json |
| [batchAccountListSample.ts][batchaccountlistsample]                                                                         | Gets information about the Batch accounts associated with the subscription. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/BatchAccountList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [batchAccountRegenerateKeySample.ts][batchaccountregeneratekeysample]                                                       | This operation applies only to Batch accounts with allowedAuthenticationModes containing 'SharedKey'. If the Batch account doesn't contain 'SharedKey' in its allowedAuthenticationMode, clients cannot use shared keys to authenticate, and must use another allowedAuthenticationModes instead. In this case, regenerating the keys will fail. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/BatchAccountRegenerateKey.json                                                                                                                                                                                                            |
| [batchAccountSynchronizeAutoStorageKeysSample.ts][batchaccountsynchronizeautostoragekeyssample]                             | Synchronizes access keys for the auto-storage account configured for the specified Batch account, only if storage key authentication is being used. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/BatchAccountSynchronizeAutoStorageKeys.json                                                                                                                                                                                                                                                                                                                                                                                            |
| [batchAccountUpdateSample.ts][batchaccountupdatesample]                                                                     | Updates the properties of an existing Batch account. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/BatchAccountUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [certificateCancelDeletionSample.ts][certificatecanceldeletionsample]                                                       | If you try to delete a certificate that is being used by a pool or compute node, the status of the certificate changes to deleteFailed. If you decide that you want to continue using the certificate, you can use this operation to set the status of the certificate back to active. If you intend to delete the certificate, you do not need to run this operation after the deletion failed. You must make sure that the certificate is not being used by any resources, and then you can try again to delete the certificate. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/CertificateCancelDeletion.json                          |
| [certificateCreateSample.ts][certificatecreatesample]                                                                       | Creates a new certificate inside the specified account. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/CertificateCreate_Full.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [certificateDeleteSample.ts][certificatedeletesample]                                                                       | Deletes the specified certificate. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/CertificateDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [certificateGetSample.ts][certificategetsample]                                                                             | Gets information about the specified certificate. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/CertificateGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [certificateListByBatchAccountSample.ts][certificatelistbybatchaccountsample]                                               | Lists all of the certificates in the specified account. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/CertificateList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [certificateUpdateSample.ts][certificateupdatesample]                                                                       | Updates the properties of an existing certificate. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/CertificateUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [locationCheckNameAvailabilitySample.ts][locationchecknameavailabilitysample]                                               | Checks whether the Batch account name is available in the specified region. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/LocationCheckNameAvailability_AlreadyExists.json                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [locationGetQuotasSample.ts][locationgetquotassample]                                                                       | Gets the Batch service quotas for the specified subscription at the given location. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/LocationGetQuotas.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [locationListSupportedCloudServiceSkusSample.ts][locationlistsupportedcloudserviceskussample]                               | Gets the list of Batch supported Cloud Service VM sizes available at the given location. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/LocationListCloudServiceSkus.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [locationListSupportedVirtualMachineSkusSample.ts][locationlistsupportedvirtualmachineskussample]                           | Gets the list of Batch supported Virtual Machine VM sizes available at the given location. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/LocationListVirtualMachineSkus.json                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [operationsListSample.ts][operationslistsample]                                                                             | Lists available operations for the Microsoft.Batch provider x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/OperationsList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [poolCreateSample.ts][poolcreatesample]                                                                                     | Creates a new pool inside the specified account. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/PoolCreate_SharedImageGallery.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [poolDeleteSample.ts][pooldeletesample]                                                                                     | Deletes the specified pool. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/PoolDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [poolDisableAutoScaleSample.ts][pooldisableautoscalesample]                                                                 | Disables automatic scaling for a pool. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/PoolDisableAutoScale.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [poolGetSample.ts][poolgetsample]                                                                                           | Gets information about the specified pool. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/PoolGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [poolListByBatchAccountSample.ts][poollistbybatchaccountsample]                                                             | Lists all of the pools in the specified account. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/PoolList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [poolStopResizeSample.ts][poolstopresizesample]                                                                             | This does not restore the pool to its previous state before the resize operation: it only stops any further changes being made, and the pool maintains its current state. After stopping, the pool stabilizes at the number of nodes it was at when the stop operation was done. During the stop operation, the pool allocation state changes first to stopping and then to steady. A resize operation need not be an explicit resize pool request; this API can also be used to halt the initial sizing of the pool when it is created. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/PoolStopResize.json                               |
| [poolUpdateSample.ts][poolupdatesample]                                                                                     | Updates the properties of an existing pool. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/PoolUpdate_EnableAutoScale.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [privateEndpointConnectionDeleteSample.ts][privateendpointconnectiondeletesample]                                           | Deletes the specified private endpoint connection. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/PrivateEndpointConnectionDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [privateEndpointConnectionGetSample.ts][privateendpointconnectiongetsample]                                                 | Gets information about the specified private endpoint connection. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/PrivateEndpointConnectionGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [privateEndpointConnectionListByBatchAccountSample.ts][privateendpointconnectionlistbybatchaccountsample]                   | Lists all of the private endpoint connections in the specified account. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/PrivateEndpointConnectionsList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [privateEndpointConnectionUpdateSample.ts][privateendpointconnectionupdatesample]                                           | Updates the properties of an existing private endpoint connection. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/PrivateEndpointConnectionUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [privateLinkResourceGetSample.ts][privatelinkresourcegetsample]                                                             | Gets information about the specified private link resource. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/PrivateLinkResourceGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [privateLinkResourceListByBatchAccountSample.ts][privatelinkresourcelistbybatchaccountsample]                               | Lists all of the private link resources in the specified account. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/PrivateLinkResourcesList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/applicationCreateSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env  node dist/applicationCreateSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[applicationcreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/applicationCreateSample.ts
[applicationdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/applicationDeleteSample.ts
[applicationgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/applicationGetSample.ts
[applicationlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/applicationListSample.ts
[applicationpackageactivatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/applicationPackageActivateSample.ts
[applicationpackagecreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/applicationPackageCreateSample.ts
[applicationpackagedeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/applicationPackageDeleteSample.ts
[applicationpackagegetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/applicationPackageGetSample.ts
[applicationpackagelistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/applicationPackageListSample.ts
[applicationupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/applicationUpdateSample.ts
[batchaccountcreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/batchAccountCreateSample.ts
[batchaccountdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/batchAccountDeleteSample.ts
[batchaccountgetdetectorsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/batchAccountGetDetectorSample.ts
[batchaccountgetkeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/batchAccountGetKeysSample.ts
[batchaccountgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/batchAccountGetSample.ts
[batchaccountlistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/batchAccountListByResourceGroupSample.ts
[batchaccountlistdetectorssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/batchAccountListDetectorsSample.ts
[batchaccountlistoutboundnetworkdependenciesendpointssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/batchAccountListOutboundNetworkDependenciesEndpointsSample.ts
[batchaccountlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/batchAccountListSample.ts
[batchaccountregeneratekeysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/batchAccountRegenerateKeySample.ts
[batchaccountsynchronizeautostoragekeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/batchAccountSynchronizeAutoStorageKeysSample.ts
[batchaccountupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/batchAccountUpdateSample.ts
[certificatecanceldeletionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/certificateCancelDeletionSample.ts
[certificatecreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/certificateCreateSample.ts
[certificatedeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/certificateDeleteSample.ts
[certificategetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/certificateGetSample.ts
[certificatelistbybatchaccountsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/certificateListByBatchAccountSample.ts
[certificateupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/certificateUpdateSample.ts
[locationchecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/locationCheckNameAvailabilitySample.ts
[locationgetquotassample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/locationGetQuotasSample.ts
[locationlistsupportedcloudserviceskussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/locationListSupportedCloudServiceSkusSample.ts
[locationlistsupportedvirtualmachineskussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/locationListSupportedVirtualMachineSkusSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/operationsListSample.ts
[poolcreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/poolCreateSample.ts
[pooldeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/poolDeleteSample.ts
[pooldisableautoscalesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/poolDisableAutoScaleSample.ts
[poolgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/poolGetSample.ts
[poollistbybatchaccountsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/poolListByBatchAccountSample.ts
[poolstopresizesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/poolStopResizeSample.ts
[poolupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/poolUpdateSample.ts
[privateendpointconnectiondeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/privateEndpointConnectionDeleteSample.ts
[privateendpointconnectiongetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/privateEndpointConnectionGetSample.ts
[privateendpointconnectionlistbybatchaccountsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/privateEndpointConnectionListByBatchAccountSample.ts
[privateendpointconnectionupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/privateEndpointConnectionUpdateSample.ts
[privatelinkresourcegetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/privateLinkResourceGetSample.ts
[privatelinkresourcelistbybatchaccountsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/typescript/src/privateLinkResourceListByBatchAccountSample.ts
[apiref]: https://docs.microsoft.com/javascript/api/@azure/arm-batch?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/batch/arm-batch/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
